11-09 - 13/34 Product(html, css, js)
Product-card
Keep shopping
CTA-Button
Form size

--- a/product.html
+++ b/product.html
@@ -25,12 +25,12 @@
                     <a href="index.html">Catalog ></a>
                     <a href="product.html" class="active">Product</a>
                 </nav>
-                <a href="all-jackets.html" class="active">Keep shopping</a>
+                
             </div>
             <div class="loader" id="loader"></div>
             <div id="products-error" class="error"></div>
             <div id="product-container" class="product-container"></div>
-            <a class="cta-button" href="index.html">Return to catalog</a>
+            <a href="index.html" class="active">Keep shopping</a>
         </section>
         
     </main>
