--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
                     </nav>
                     
                 </div>
-                <h1>Cart</h1>
+                <h1>Shopping cart</h1>
                 <div class="loader" id="loader"></div>
                 <div id="cart-empty" hidden>Your cart is empty.</div>
                 <div id="cart-items" class="cart-list"></div>
