--- a/product.html
+++ b/product.html
@@ -30,7 +30,11 @@
             <div class="loader" id="loader"></div>
             <div id="products-error" class="error"></div>
             <div id="product-container" class="product-container"></div>
-            <a href="index.html" class="active">Keep shopping</a>
+            <div class="nav-actions">
+                <a href="index.html" class="active">Keep shopping</a>
+                <a href="cart.html" class="active">To checkout</a>
+            </div>
+                
         </section>
         
     </main>
