--- a/confirmation.html
+++ b/confirmation.html
@@ -6,30 +6,35 @@
     <title>Rainy Days - Confirmation</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/83b00f3480.js" crossorigin="anonymous"></script>
-    <script src="js/confirmation.js" defer ></script>
-
+    <script src="js/confirmation.js" defer></script>
 </head>
 <body>
-     <header class="header">
-        <a href="index.html"><img src="Logo/Logo.png" class="logo" ></a>
+    <div class="wrapper">
+        <header class="header">
+        <a href="index.html"><img src="Logo/Logo.png" class="logo"></a>
         <nav class="nav">
-            <a href="index.html" aria-label="shopping cart" title="Cataloge"><i class="fa-solid fa-house"></i></a>  
-            <a href="cart.html" aria-label="shopping cart" title="Cart"><i class="fa-solid fa-cart-shopping"></i></a>  
+            <a href="index.html" aria-label="home" title="Catalog"><i class="fa-solid fa-house"></i></a>  
+            <a href="cart.html" aria-label="cart" title="Cart"><i class="fa-solid fa-cart-shopping"></i></a>  
         </nav>
     </header>
-    <main class="main-content">
-        <div id="conf-container" class="conf-container"></div>
-        <h1>Your order is on the way!</h1>
-        <p>Thank you for your purchase. A confirmation and receipt has been sent to your e-mail.</p>
-        <a class="button" href="index.html">Return to catalog</a>
+
+    <main class="main-content-conf">
+            <div class="conf-container">
+                <h1>Your order is on the way!</h1>
+                <p>Thank you for your purchase. A confirmation and receipt has been sent to your e-mail.</p>
+                <a class="cta-button" href="index.html">Return to catalog</a>
+            </div>
     </main>
+
     <footer class="footer">
         <p>© Rainy Days</p>
         <div class="social-icons">
-            <a href="https://www.facebook.com" aria-label="link to facebook page" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com" aria-label="link to instagram page" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.youtube.com" aria-label="link to youtube page" title="Youtube"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com" aria-label="Facebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com" aria-label="Instagram" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com" aria-label="Youtube" title="Youtube"><i class="fa-brands fa-youtube"></i></a>
         </div>
     </footer>
+    </div>
+    
 </body>
 </html>
