--- a/confirmation.html
+++ b/confirmation.html
@@ -18,12 +18,14 @@
         </nav>
     </header>
 
-    <main class="main-content-conf">
+    <main class="main-content">
+        <section class="products">
             <div class="conf-container">
                 <h1>Your order is on the way!</h1>
                 <p>Thank you for your purchase. A confirmation and receipt has been sent to your e-mail.</p>
                 <a class="cta-button" href="index.html">Return to catalog</a>
             </div>
+        </section>
     </main>
 
     <footer class="footer">
