--- a/cart.html
+++ b/cart.html
@@ -24,20 +24,24 @@
                         <a href="index.html">Catalog ></a>
                         <a href="cart.html" class="active">Cart</a>
                     </div>
-                <h1>Shopping cart</h1>
-                <div class="loader" id="loader"></div>
-                <div id="cart-empty" hidden>Your cart is empty.</div>
-                <div id="cart-items" class="cart-list"></div>
-                <div class="cart-summary">
-                    <div>Items: <span id="cart-count">0</span></div>
-                    <div class="cart-total">Subtotal: <span id="cart-total">0</span> $</div>
-                    <a id="checkout-button" class="cta-button" href="confirmation.html">Place order</a>
-                    <div id="cart-error" class="error" hidden></div>
+                <div class="cart-content">
+                    <h1>Shopping cart</h1>
+                    <div class="loader" id="loader"></div>
+                    <div id="cart-empty" hidden>Your cart is empty.</div>
+                    <div class="cart-box">
+                        <div id="cart-items" class="cart-list"></div>
+                        <div class="cart-summary">
+                            <div>Items: <span id="cart-count">0</span></div>
+                            <div class="cart-total">Subtotal: <span id="cart-total">0</span> $</div>
+                            <a id="checkout-button" class="cta-button" href="confirmation.html">Place order</a>
+                            <div id="cart-error" class="error" hidden></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="nav-actions">
                 <a href="index.html" class="active">Keep shopping</a>
-   
                 </div>
+                
             </section>
         </main>
         <footer class="footer">
