--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
         <main class="main-content">
             <section class="hero">
-                <h1>Beyond the ordinary.</h1>
+                <h1>Pushing the comfort zone</h1>
                 <button class="cta-button">Catalog</button>
             </section>
         
