--- a/product.html
+++ b/product.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days - Product Card</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/product.css">
     <script src="https://kit.fontawesome.com/83b00f3480.js" crossorigin="anonymous"></script>
     <script src="js/product.js" defer></script>
    
@@ -21,7 +22,7 @@
     <main class="main-content">
             <div class="nav-page">
                 <a href="index.html">Catalog ></a>
-                <a href="product.html" class="active">Product</a>
+                <p>&nbsp;<u>Product</u></p>
             </div> 
             <div class="loader" id="loader"></div>
             <div id="products-error" class="error"></div>
