fix-header-and-color
- added sticky position for header - css
- added hamburger menu, mobile menu - html, css, js
- changed color for text, footer, header - css
- added coming-soon page for menu items

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainy Days - Confirmation</title>
+    <title>Rainy Days - Coming Soon</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/confirmation.css">
     <script src="https://kit.fontawesome.com/83b00f3480.js" crossorigin="anonymous"></script>
-    <script src="js/confirmation.js" defer></script>
     <script src="js/menu.js" defer></script>
 </head>
 <body>
@@ -34,8 +32,8 @@
     <main class="main-content">
         <section class="products">
             <div class="conf-container">
-                <h1>Your order is on the way!</h1>
-                <p>Thank you for your purchase. A confirmation and receipt has been sent to your e-mail.</p>
+                <h1>Coming soon</h1>
+                <p>This page is under construction.</p>
                 <a class="cta-button" href="index.html">Return to catalog</a>
             </div>
         </section>
