--- a/index.html
+++ b/index.html
@@ -8,18 +8,28 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/83b00f3480.js" crossorigin="anonymous"></script>
     <script src="js/index.js" defer ></script>
-
+    <script src="js/menu.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
             <a href="index.html"><img src="Logo/Logo.png" class="logo" ></a>
+            <button class="ham-icon" aria-label="Open menu"><i class="fa-solid fa-bars"></i></button>
+                    <div class="mobile-menu">
+                        <button class="menu-close" aria-label="Close menu"><i class="fas fa-times"></i></button>
+                        <nav class="mobile-menu-content">
+                            <a href="coming-soon.html">Women</a>
+                            <a href="coming-soon.html">Men</a>
+                            <a href="coming-soon.html">All jackets</a>
+                            <a href="coming-soon.html">About us</a>
+                            <a href="coming-soon.html">Contact us</a>
+                        </nav>
+                    </div>
             <nav class="nav">
                 <a href="index.html" aria-label="shopping cart" title="Cataloge"><i class="fa-solid fa-house"></i></a>  
                 <a href="cart.html" aria-label="shopping cart" title="Cart"><i class="fa-solid fa-cart-shopping"></i></a>  
             </nav>
         </header>
-    
         <main class="main-content">
             <section class="hero">
                 <h1>Pushing the comfort zone</h1>
