--- a/cart.html
+++ b/cart.html
@@ -8,11 +8,23 @@
     <link rel="stylesheet" href="css/cart.css">
     <script src="https://kit.fontawesome.com/83b00f3480.js" crossorigin="anonymous"></script>
     <script src="js/cart.js" defer ></script>
+    <script src="js/menu.js" defer></script>
 </head>
 <body>
      <div class="wrapper">
-        <header class="header">
+         <header class="header">
             <a href="index.html"><img src="Logo/Logo.png" class="logo" ></a>
+            <button class="ham-icon" aria-label="Open menu"><i class="fa-solid fa-bars"></i></button>
+                    <div class="mobile-menu">
+                        <button class="menu-close" aria-label="Close menu"><i class="fas fa-times"></i></button>
+                        <nav class="mobile-menu-content">
+                            <a href="coming-soon.html">Women</a>
+                            <a href="coming-soon.html">Men</a>
+                            <a href="coming-soon.html">All jackets</a>
+                            <a href="coming-soon.html">About us</a>
+                            <a href="coming-soon.html">Contact us</a>
+                        </nav>
+                    </div>
             <nav class="nav">
                 <a href="index.html" aria-label="shopping cart" title="Cataloge"><i class="fa-solid fa-house"></i></a>  
                 <a href="cart.html" aria-label="shopping cart" title="Cart"><i class="fa-solid fa-cart-shopping"></i></a>  
@@ -23,7 +35,7 @@
             <section id="cart-container" class="cart-container">
                     <div class="nav-page">
                         <a href="index.html">Catalog ></a>
-                        <a href="cart.html" class="active">Cart</a>
+                        <a href="cart.html" class="nav-page-active">Cart</a>
                     </div>
                 <div class="cart-content">
                     <h1>Shopping cart</h1>
@@ -40,7 +52,7 @@
                     </div>
                 </div>
                 <div class="nav-actions">
-                <a href="index.html" class="active">Keep shopping</a>
+                <a href="index.html" class="nav-page-active">Keep shopping</a>
                 </div>
                 
             </section>
