--- a/product.html
+++ b/product.html
@@ -8,17 +8,28 @@
     <link rel="stylesheet" href="css/product.css">
     <script src="https://kit.fontawesome.com/83b00f3480.js" crossorigin="anonymous"></script>
     <script src="js/product.js" defer></script>
-   
+    <script src="js/menu.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
-        <a href="index.html"><img src="Logo/Logo.png" class="logo" ></a>
-        <nav class="nav">
-            <a href="index.html" aria-label="shopping cart" title="Cataloge"><i class="fa-solid fa-house"></i></a>  
-            <a href="cart.html" aria-label="shopping cart" title="Cart"><i class="fa-solid fa-cart-shopping"></i></a>  
-        </nav>
-    </header>
+         <header class="header">
+            <a href="index.html"><img src="Logo/Logo.png" class="logo" ></a>
+            <button class="ham-icon" aria-label="Open menu"><i class="fa-solid fa-bars"></i></button>
+                    <div class="mobile-menu">
+                        <button class="menu-close" aria-label="Close menu"><i class="fas fa-times"></i></button>
+                        <nav class="mobile-menu-content">
+                            <a href="coming-soon.html">Women</a>
+                            <a href="coming-soon.html">Men</a>
+                            <a href="coming-soon.html">All jackets</a>
+                            <a href="coming-soon.html">About us</a>
+                            <a href="coming-soon.html">Contact us</a>
+                        </nav>
+                    </div>
+            <nav class="nav">
+                <a href="index.html" aria-label="shopping cart" title="Cataloge"><i class="fa-solid fa-house"></i></a>  
+                <a href="cart.html" aria-label="shopping cart" title="Cart"><i class="fa-solid fa-cart-shopping"></i></a>  
+            </nav>
+        </header>
     <main class="main-content">
             <div class="nav-page">
                 <a href="index.html">Catalog ></a>
@@ -28,7 +39,7 @@
             <div id="products-error" class="error"></div>
             <div id="product-container" class="product-container"></div>
             <div class="nav-actions">
-                <a href="index.html" class="active">Keep shopping</a>
+                <a href="index.html" class="nav-page-active">Keep shopping</a>
             </div>
     </main>
     <footer class="footer">
